# MinkowskiEngine

./: MANIFEST.in  README.md  build_helpers.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-cpu.yml  ci-gpu.yml
MinkowskiEngine/: MinkowskiBroadcast.py  MinkowskiConvolution.py  MinkowskiInterpolation.py  MinkowskiKernelGenerator.py  MinkowskiNormalization.py  MinkowskiPooling.py  MinkowskiPruning.py  MinkowskiSparseTensor.py  MinkowskiTensorField.py  MinkowskiUnion.py  __init__.py
docs/: issues.md  quick_start.md
src/: coordinate_map_gpu.cu  coordinate_map_gpu.cuh  kernel_map.cuh  spmm.cu  utils.hpp
tests/cpp/: README.md  setup.py  test_all.sh  utils.py
tests/data/: 1.ply
tests/python/: broadcast.py  build_config.py  common.py  convolution.py  coordinate_manager.py  direct_pool.py  global.py  interpolation.py  network_speed.py  norm.py  pool.py  pruning.py  quantization.py  sparse_tensor.py  spmm.py  strided_conv.py  summary.py  union.py
